--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
   "dependencies": {
     "express": "^4.18.2",
     "undici": "^6.11.1"
+  },
+  "devDependencies": {
+    "@flydotio/dockerfile": "^0.5.4"
   }
 }
